--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>STNPublicInfo</title>
-  <base href="/">
+  <base href=".">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1">  
+  <link rel="icon" type="image/x-icon" href="https://wim.usgs.gov/favicon-wim.png"> 
 </head>
 <body>
   <app-root></app-root>
